# tt_english

tt_english/: config.env  pyproject.toml
tt_english/app/: main.py
tt_english/app/apis/: deps.py
tt_english/app/apis/v1/: event_router.py  match_router.py  user_router.py
tt_english/app/core/: config.py  security.py
tt_english/app/crud/: event_signup_crud.py  match_crud.py  user_crud.py
tt_english/app/db/: database.py
tt_english/app/db/models/: chat_room_model.py  chat_room_participant_model.py  event_signup_model.py  user_model.py
tt_english/app/services/: matching_service.py  wechat_service.py
tt_english/app/utils/: time_utils.py
